samples/_failures_safe/1761088526_38b1cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6eb3f56.c: In function ‘main’:
./samples/SAFE/__tmp_b6eb3f56.c:156:12: error: missing terminating " character
  156 |     printf("Error sequences (3+
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b6eb3f56.c:156:5: error: expected expression at end of input
  156 |     printf("Error sequences (3+
      |     ^~~~~~
./samples/SAFE/__tmp_b6eb3f56.c:156:5: error: expected declaration or statement at end of input
